  - Parameter changes in PDO registration functions ecrt_domain_register_pdo()
    and ecrt_register_pdo_range(): Replaced slave_address, vendor ID and
    product code arguments with a slave pointer, which has to be optained with
    a prior call to ecrt_master_get_slave().
  - ecrt_master_get_slave() got additional parameters to check for vendor ID
    and product code.
  - Added ecrt_master_get_status() to get information about the bus.
  - Added functions to set up an alternative PDO mapping, i. e.
    ec_slave_pdo_mapping_clear(), ec_slave_pdo_mapping_add() and
    ec_slave_pdo_mapping().
* Device interface changes:
  - Replaced ecdev_register() and ecdev_unregister() with ecdev_offer() and
    ecdev_withdraw(), respectively. The device modules now offer all their
    devices to the master, which decides, which ones to register.
* All EEPROM write operations from user space are now blocking until
  writing has finished and return appropriate error codes.
* Implemented setting of secondary slave address (alias) via sysfs.
* Removed annoying eeprom_write_enable file. EEPROM writing always enabled.
* Removed EtherCAT line comments from 8139too drivers.

-------------------------------------------------------------------------------

Changes in version 1.2.0:

* Serveral fixes of bugs and stability issues. Master should now run fine
  with kernels 2.6.17 to 2.6.19.
* Realtime interface changes:
  - Re-introduced ecrt_domain_queue() to allow datagram queuing apart
    from datagram processing. The queuing of a domain's datagrams is not
    done in ecrt_domain_process() any more!
  - Removed ecrt_master_deactivate(). Its functionality was moved into
    ecrt_master_release().
  - Removed ecrt_master_prepare(). Its functionality was moved into
    ecrt_master_activate().
  - Renamed ecdev_start() and ecdev_stop() to ecdev_open() and ecdev_close().
    These two functions now take a pointer to ec_device_t as their arguments.