@@ -7,8 +7,6 @@ $Id$
 -------------------------------------------------------------------------------
 
 * Release 1.3:
-  - Remove addressing scheme "X:Y".
-  - Remove ugly ec_slave_is_coupler().
   - Dynamic creation of EoE handlers.
 
 * Future features:
